Fix alignment of quality next to buttons

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -124,6 +124,7 @@ div p {
 
 div span {
   font-size: 2rem;
+  vertical-align: middle;
 }
 
 div hr {
